--- a/style.css
+++ b/style.css
@@ -1,24 +1,102 @@
-#gameboard-grid {
+body {
+    background: linear-gradient(cadetblue, rgb(118, 122, 182));
+    height: 100vh;
+    margin: 0;
+}
+
+header {
+    background-color: rgb(64, 106, 107);
+    color: white;
+    margin: 0;
+}
+
+h1 {
+    margin: 0;
+    margin-bottom: 50px;
+    padding: 20px;
+    text-align: center;
+    font-size: 50px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+#game-status {
+    text-align: center;
+    display: block;
+    font-size: 30px;
+    font-weight: bold;
+    font-family: monospace;
+    padding: 20px;
+}
+
+#gameboard-container {
+    position: relative;
     width: min(500px, 80%);
+    aspect-ratio: 1;
+    background-color: white;
+    margin: 0 auto;
+    padding: 20px;
+    border-radius: 20px;
+    box-shadow: 2px 2px 10px black;
+}
+
+#gameboard-grid {
+    width: 100%;
     aspect-ratio: 1;
     display: grid;
     grid-template-columns: 33.33% 33.33% 33.33%;
     grid-template-rows: 33.33% 33.33% 33.33%;
-    border: 2px black solid;
-    background-color: black;
-    border-radius: 6px;
     margin: 0 auto;
+    border: 2px solid black;
 }
 
 .gameboard-cell {
     width: 100%;
     height: 100%;
     border: 2px black solid;
-    border-radius: 6px;
-    background-color: #d1d1d1;
+    background-color: white;
     cursor: pointer;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .gameboard-cell:hover {
+    background-color: lightblue;
+}
+
+#game-message {
+    display: none;
+    position:absolute;
+    top: 50%;
+    left: 50%;
+    width: min(400px, 95%);
+    height: 300px;
+    transform: translate(-50%, -50%);
+    background-color: rgba(0,0,0,0.8);
+    backdrop-filter: blur(5px);
+    border-radius: 10px;
+}
+
+.cell-img {
+    height: 80%;
+    width: 80%;
+    transition: 0.2s ease-in-out;
+    transform: scale(0);
+    filter: opacity(0%);
+    pointer-events: none;
+}
+
+#restart-btn {
+    margin: 0 auto;
+    display: block;
+    padding: 20px 40px;
+    margin-top: 20px;
+    font-size: 2rem;
     background-color: white;
+    color: black;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
 }
